# financial-chatbot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml  sample-qa.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/src/agents/: __init__.py  models.py  prompts.py
backend/src/agents/retrieval/: __init__.py
backend/src/config/: app.py  jwt.py  pinecone.py  postgresql.py  redis.py
backend/src/containers/: __init__.py
backend/src/entities/sql/: user.py
backend/src/infrastructures/: pinecone.py  postgresql.py  redis.py
backend/src/models/: auth.py  document.py  financial_data.py  user.py
backend/src/repositories/: document.py  financial.py  user.py
backend/src/servers/: __init__.py
backend/src/servers/api/: __init__.py
backend/src/servers/api/controllers/: agent.py  auth.py  dto.py  migration.py
backend/src/servers/api/middlewares/: auth.py  error.py
backend/src/services/: agent.py  auth.py  migration.py
backend/src/types/: __init__.py
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agent/ask-question/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/chat/: ChatClient.tsx  page.tsx
frontend/app/login/: LoginForm.tsx  page.tsx
frontend/app/register/: RegisterForm.tsx  page.tsx
frontend/components/: AuthShell.tsx
frontend/lib/: api.ts  auth.ts  backend.ts
scripts/: pinecone_migration.sh  postgres_migration.sh
(+4 files in other folders)
