[project]
name = "financial-chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "greenlet>=3.5.2",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pinecone>=9.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
]
